--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 
+
+{% block announce %}
+<span class="twemoji">{% include ".icons/fontawesome/solid/triangle-exclamation.svg" %}</span>
+The Spoofax artifact server is currently experiencing an outage. Therefore, Spoofax cannot be downloaded while this is ongoing.<br />We apologise for the inconvenience.
+{% endblock %}
+
 <!-- Meta tags -->
 {% block extrahead %}
 
