--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
 
 
+{# Commented out:
 {% block announce %}
 <span class="twemoji">{% include ".icons/fontawesome/solid/triangle-exclamation.svg" %}</span>
-The Spoofax artifact server is currently experiencing an outage. Therefore, Spoofax cannot be downloaded while this is ongoing.<br />We apologise for the inconvenience.
+The Spoofax artifact server is currently experiencing an outage. Therefore, Spoofax cannot be downloaded while this is ongoing. We apologise for the inconvenience.
 {% endblock %}
+#}
 
 <!-- Meta tags -->
 {% block extrahead %}
